# GenAI-Exchange

./: .gitignore  PROJECT_OUTLINE.md  README.md  SETUP-GUIDE.md  dev-setup.md  next.config.ts  package-lock.json  package.json  setup-genai-exchange.ps1
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/v1/endpoints/: analytics.py  chat.py  documents.py  health.py  metrics.py  negotiation.py  qa.py
backend/app/core/: config.py  logging.py
backend/app/dependencies/: __init__.py  services.py
backend/app/models/: analytics.py  chat.py  document.py  metrics.py  negotiation.py  qa.py
backend/app/services/: analytics_service.py  cache_service.py  chat_session_service.py  clause_segmenter.py  document_orchestrator.py  document_processor.py  document_processor_grpc.py  document_processor_http.py  document_queue_manager.py  embeddings_service.py  firestore_client.py  gemini_client.py  language_detection_service.py  metrics_service.py  negotiation_service.py  privacy_service.py  readability_service.py  risk_analyzer.py  translation_service.py
messages/: bn.json  en.json  hi.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/components/: AnalysisPanel.tsx  ChatInterface.tsx  LanguageSelector.tsx  LocaleProvider.tsx  MobileHeader.tsx  NegotiationPanel.tsx  QueueStatusPanel.tsx  ReadabilityPanel.tsx  RiskHeatmap.tsx  Sidebar.tsx  TranslateButton.tsx  TranslationPanel.tsx  UploadCardsContainer.tsx  UploadSuccessCard.tsx
src/components/analytics/: AnalyticsSkeleton.tsx  CategoryBreakdownChart.tsx  ChartErrorBoundary.tsx  DocumentTrendChart.tsx  EmptyState.tsx  RiskDistributionChart.tsx
src/components/ui/: toast.tsx
src/contexts/: LanguageContext.tsx
src/hooks/: useAnalytics.ts  useChatMessages.ts  useDocumentManagement.ts  useDocuments.ts  useFileUpload.ts  useNegotiation.ts  useNegotiationState.ts
src/i18n/: config.ts
src/lib/: api.ts  chart-data-transforms.ts  fileValidation.ts  fonts.ts  locale.ts  translation-utils.ts
src/providers/: LocaleProvider.tsx  QueryProvider.tsx
src/sections/: Dashboard.tsx
src/types/: analytics.ts
